fix spacing issue

--- a/style.css
+++ b/style.css
@@ -135,6 +135,12 @@ svg {
   margin-inline: auto;
 }
 
+/* we have removed spacing so we using this class to solve this */
+:where(.flow :not(:first-child)) {
+    margin-top: var(--flow-spacer, 3em);
+}
+
+
 .even-columns {
   display: grid;
   gap: 1rem;
@@ -154,6 +160,14 @@ body {
   color: var(--clr-primary-400);
 }
 
+p:not([class]){
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width="wide"]{
+  max-width: 42ch;
+}
 /* button */
 
 button {
